# Leaseefy

./: .gitignore  README.md  catalogs.json  docker-compose.yml
.agent/skills/feature-development-workflow/: SKILL.md
backend/: Dockerfile  database.py  main.py  models.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: proxy.js
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/api/chat/: route.js
frontend/src/app/api/template/: route.js
frontend/src/app/api/templates/mnda/: route.js
frontend/src/app/create-document/: create.module.css  page.js
frontend/src/app/dashboard/: dashboard.module.css  page.js
frontend/src/app/mnda/: mnda.module.css  page.js
frontend/src/app/signin/: page.js  signin.module.css
frontend/src/app/signup/: page.js
frontend/src/components/: AIAssistant.js  AIAssistant.module.css  Navbar.js
frontend/src/utils/: mndaMerger.js  templateParser.js
templates/: LICENSE.txt
templates/AI-Addendum/: README.md
templates/Pilot-Agreement/: README.md
templates/Software-License-Agreement/: README.md
