[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt<4.0.0",
    "fastapi>=0.138.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
